--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "nodemon": "^1.19.1",
+    "socket.io-redis": "^5.2.0",
     "ts-node": "^8.3.0"
   }
 }
