--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.1",
+    "@types/mongoose": "^5.5.17",
     "nodemon": "^1.19.1",
     "socket.io-redis": "^5.2.0",
     "ts-node": "^8.3.0"
