--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,9 +9,11 @@
   "author": "hosung",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/helmet": "^0.0.44",
     "@types/mongoose": "^5.5.17",
+    "cors": "^2.8.5",
     "helmet": "^3.21.0",
     "nodemon": "^1.19.1",
     "socket.io-redis": "^5.2.0",
